[gd_scene load_steps=4 format=2]

[ext_resource path="res://Object/Component/HealtBar/HealthBar.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.54902, 0.0352941, 1 )
border_color = Color( 0.145098, 0.0117647, 0.0117647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.0117647, 0.0117647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HealthBar" type="ProgressBar"]
margin_right = 14.0
margin_bottom = 2.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibleTimer" type="Timer" parent="."]

[connection signal="value_changed" from="." to="." method="_on_HealthBar_value_changed"]
[connection signal="timeout" from="VisibleTimer" to="." method="_on_VisibleTimer_timeout"]
